[gd_scene load_steps=5 format=4 uid="uid://u84grsd473oa"]

[ext_resource type="TileSet" uid="uid://duauvrqv8jk" path="res://map_tileset.tres" id="1_750w0"]
[ext_resource type="Script" path="res://scenes/map_looper.gd" id="1_guvpw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_naqr5"]
size = Vector2(32, 640)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xri7q"]
size = Vector2(288, 32)

[node name="MapLooper" type="Node2D"]
script = ExtResource("1_guvpw")

[node name="TileMapLayer1" type="TileMapLayer" parent="."]
position = Vector2(0, -640)
tile_map_data = PackedByteArray("AAAAAAAAZwALAAAAAAAAAAEAZwALAAAAAAAAAAIAZwALAAAAAAAAAAMAZwALAAAAAAAAAAQAZwALAAAAAAAAAAUAZwALAAAAAAAAAAYAZwALAAAAAAAAAAcAZwALAAAAAAAAAAgAZwALAAAAAAAAABMAZwALAAAAAAAAABIAZwALAAAAAAAAABEAZwALAAAAAAAAABAAZwALAAAAAAAAAA8AZwALAAAAAAAAAA4AZwALAAAAAAAAAA0AZwALAAAAAAAAAAwAZwALAAAAAAAAAAsAZwALAAAAAAAAAAoAZwALAAAAAAAAAAkAZwALAAAAAAAKAAAAZwALAAAAAAAKAAEAZwALAAAAAAAKAAIAZwALAAAAAAAKAAMAZwALAAAAAAAKAAQAZwALAAAAAAAKAAUAZwALAAAAAAAKAAYAZwALAAAAAAAKAAcAZwALAAAAAAAKAAgAZwALAAAAAAAKAAkAZwALAAAAAAAKAAoAZwALAAAAAAAKAAsAZwALAAAAAAAKAAwAZwALAAAAAAAKAA0AZwALAAAAAAAKAA4AZwALAAAAAAAKAA8AZwALAAAAAAAKABAAZwALAAAAAAAKABEAZwALAAAAAAAKABIAZwALAAAAAAAKABMAZwALAAAAAAA=")
tile_set = ExtResource("1_750w0")

[node name="Marker2D" type="Marker2D" parent="TileMapLayer1"]
position = Vector2(0, 640)

[node name="LEFTStaticBody2D" type="StaticBody2D" parent="TileMapLayer1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayer1/LEFTStaticBody2D"]
position = Vector2(16, 320)
shape = SubResource("RectangleShape2D_naqr5")

[node name="RIGHTStaticBody2D" type="StaticBody2D" parent="TileMapLayer1"]
position = Vector2(320, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayer1/RIGHTStaticBody2D"]
position = Vector2(16, 320)
shape = SubResource("RectangleShape2D_naqr5")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(0, -1280)
tile_map_data = PackedByteArray("AAAAAAAAZwALAAAAAAAAAAEAZwALAAAAAAAAAAIAZwALAAAAAAAAAAMAZwALAAAAAAAAAAQAZwALAAAAAAAAAAUAZwALAAAAAAAAAAYAZwALAAAAAAAAAAcAZwALAAAAAAAAAAgAZwALAAAAAAAAAAkAZwALAAAAAAAAAAoAZwALAAAAAAAAAAsAZwALAAAAAAAAAAwAZwALAAAAAAAAAA0AZwALAAAAAAAAAA4AZwALAAAAAAAAAA8AZwALAAAAAAAAABAAZwALAAAAAAAAABEAZwALAAAAAAAAABIAZwALAAAAAAAAABMAZwALAAAAAAAKABMAZwALAAAAAAAKABIAZwALAAAAAAAKABEAZwALAAAAAAAKABAAZwALAAAAAAAKAA8AZwALAAAAAAAKAA4AZwALAAAAAAAKAA0AZwALAAAAAAAKAAwAZwALAAAAAAAKAAsAZwALAAAAAAAKAAoAZwALAAAAAAAKAAkAZwALAAAAAAAKAAgAZwALAAAAAAAKAAcAZwALAAAAAAAKAAYAZwALAAAAAAAKAAUAZwALAAAAAAAKAAQAZwALAAAAAAAKAAMAZwALAAAAAAAKAAIAZwALAAAAAAAKAAEAZwALAAAAAAAKAAAAZwALAAAAAAA=")
tile_set = ExtResource("1_750w0")

[node name="Marker2D" type="Marker2D" parent="TileMapLayer2"]
position = Vector2(0, 640)

[node name="LEFTStaticBody2D" type="StaticBody2D" parent="TileMapLayer2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayer2/LEFTStaticBody2D"]
position = Vector2(16, 320)
shape = SubResource("RectangleShape2D_naqr5")

[node name="RIGHTStaticBody2D" type="StaticBody2D" parent="TileMapLayer2"]
position = Vector2(320, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayer2/RIGHTStaticBody2D"]
position = Vector2(16, 320)
shape = SubResource("RectangleShape2D_naqr5")

[node name="TileMapLayer3" type="TileMapLayer" parent="."]
position = Vector2(0, -1920)
tile_map_data = PackedByteArray("AAAAAAAAZwALAAAAAAAAAAEAZwALAAAAAAAAAAIAZwALAAAAAAAAAAMAZwALAAAAAAAAAAQAZwALAAAAAAAAAAUAZwALAAAAAAAAAAYAZwALAAAAAAAAAAcAZwALAAAAAAAAAAgAZwALAAAAAAAAAAkAZwALAAAAAAAAAAoAZwALAAAAAAAAAAsAZwALAAAAAAAAAAwAZwALAAAAAAAAAA0AZwALAAAAAAAAAA4AZwALAAAAAAAAAA8AZwALAAAAAAAAABAAZwALAAAAAAAAABEAZwALAAAAAAAAABIAZwALAAAAAAAAABMAZwALAAAAAAAKABMAZwALAAAAAAAKABIAZwALAAAAAAAKABEAZwALAAAAAAAKABAAZwALAAAAAAAKAA8AZwALAAAAAAAKAA4AZwALAAAAAAAKAA0AZwALAAAAAAAKAAwAZwALAAAAAAAKAAsAZwALAAAAAAAKAAoAZwALAAAAAAAKAAkAZwALAAAAAAAKAAgAZwALAAAAAAAKAAcAZwALAAAAAAAKAAYAZwALAAAAAAAKAAUAZwALAAAAAAAKAAQAZwALAAAAAAAKAAMAZwALAAAAAAAKAAIAZwALAAAAAAAKAAEAZwALAAAAAAAKAAAAZwALAAAAAAA=")
tile_set = ExtResource("1_750w0")

[node name="Marker2D" type="Marker2D" parent="TileMapLayer3"]
position = Vector2(0, 640)

[node name="LEFTStaticBody2D" type="StaticBody2D" parent="TileMapLayer3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayer3/LEFTStaticBody2D"]
position = Vector2(16, 320)
shape = SubResource("RectangleShape2D_naqr5")

[node name="RIGHTStaticBody2D" type="StaticBody2D" parent="TileMapLayer3"]
position = Vector2(320, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayer3/RIGHTStaticBody2D"]
position = Vector2(16, 320)
shape = SubResource("RectangleShape2D_naqr5")

[node name="TileMapLayerBase" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAZwALAAAAAAAAAAEAZwALAAAAAAAAAAIAZwALAAAAAAAAAAMAZwALAAAAAAAAAAQAZwALAAAAAAAAAAUAZwALAAAAAAAAAAYAZwALAAAAAAAAAAcAZwALAAAAAAAAAAgAZwALAAAAAAAAAAkAZwALAAAAAAAAAAoAZwALAAAAAAAAAAsAZwALAAAAAAAAAAwAZwALAAAAAAAAAA0AZwALAAAAAAAAAA4AZwALAAAAAAAAAA8AZwALAAAAAAAAABAAZwALAAAAAAAAABEAZwALAAAAAAAAABIAZwALAAAAAAAAABMAZwALAAAAAAABABMAZwALAAAAAAACABMAZwALAAAAAAADABMAZwALAAAAAAAEABMAZwALAAAAAAAFABMAZwALAAAAAAAGABMAZwALAAAAAAAHABMAZwALAAAAAAAIABMAZwALAAAAAAAKABMAZwALAAAAAAAJABMAZwALAAAAAAAKABIAZwALAAAAAAAKABEAZwALAAAAAAAKABAAZwALAAAAAAAKAA8AZwALAAAAAAAKAA4AZwALAAAAAAAKAA0AZwALAAAAAAAKAAwAZwALAAAAAAAKAAsAZwALAAAAAAAKAAoAZwALAAAAAAAKAAkAZwALAAAAAAAKAAgAZwALAAAAAAAKAAcAZwALAAAAAAAKAAYAZwALAAAAAAAKAAUAZwALAAAAAAAKAAQAZwALAAAAAAAKAAMAZwALAAAAAAAKAAIAZwALAAAAAAAKAAEAZwALAAAAAAAKAAAAZwALAAAAAAA=")
tile_set = ExtResource("1_750w0")

[node name="LEFTStaticBody2D" type="StaticBody2D" parent="TileMapLayerBase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayerBase/LEFTStaticBody2D"]
position = Vector2(16, 320)
shape = SubResource("RectangleShape2D_naqr5")

[node name="RIGHTStaticBody2D" type="StaticBody2D" parent="TileMapLayerBase"]
position = Vector2(320, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayerBase/RIGHTStaticBody2D"]
position = Vector2(16, 320)
shape = SubResource("RectangleShape2D_naqr5")

[node name="BOTTOMStaticBody2D" type="StaticBody2D" parent="TileMapLayerBase"]
position = Vector2(32, 608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapLayerBase/BOTTOMStaticBody2D"]
position = Vector2(144, 16)
shape = SubResource("RectangleShape2D_xri7q")
